less/screen-beta.less
.action-view {
	#bodyContent {
		max-width: 715px;
	}

	&.ns-special {
		#bodyContent {
			max-width: none;
		}
	}
}

/* Content */
div#content {
	line-height: @content-line-height;
	.mw-editsection {
		font-family: @content-font-family;
	}

	p {
		line-height: inherit;
	}

	h1,
	#firstHeading {
		font-family: @content-heading-font-family;
		font-size: 1.8em;
		line-height: 30pt;
		padding: 0;
		margin-bottom: 4pt;
	}

	h2 {
		font-size: 1.5em;
		line-height: 22pt;
		margin-top: 16pt;
	}

	h2 {
		font-family: @content-heading-font-family;
		padding: 0;
		margin-bottom: 4pt;
	}

	h3,
	h4,
	h5,
	h6 {
		margin-top: 3pt;
		padding-bottom: 0;
		margin-bottom: 0;
	}

	h3 {
		font-size: 1.17em;
		line-height: 22pt;
	}

	h3,
	h4 {
		font-weight: bold;
	}

	h4,
	h5,
	h6 {
		font-size: 100%; /* (reset) */
	}

	h6 {
		font-style: italic;
	}

	p {
		margin-bottom: 8pt;
	}

	pre {
		overflow-x: auto;
	}

	blockquote {
		font-family: @content-heading-font-family;
		font-size: 1.1em;
		line-height: @content-line-height;
		margin: 1em 0;
		padding: 0 35px 0 40px;
		position: relative;

		&:before {
			content: open-quote;
			font-size: 3em;
			line-height: 1;
			position: absolute;
			left: 0;
			top: 0;
		}

		&:after{
			content: close-quote;
			font-size: 3em;
			line-height: 1;
			position: absolute;
			right: 0;
			bottom: 0;
		}
	}

	// Table of contents
	#toc {
		padding: 0 1.4em;
		margin: 0 1em 0 0;
		font-size: 100%;
		background-color: transparent;
		border: none;
		border-left: 5px solid #e0e0e0;
		color: #333;
	}

	#toc #toctitle, .toc #toctitle, #toc .toctitle, .toc .toctitle {
		text-align: left;
	}

	.tocnumber {
		display: none;
	}

	// FIXME: this is hacky
	#toc h2 {
		font-size: 100%;
		font-family: @content-font-family;
	}

	sup {
		line-height: 0;
	}
}

// External links
.external {
	background-position: center right;
	background-repeat: no-repeat;
	.background-image('images/external-link-ltr-icon.png');
	padding-right: 13px;
}

.mw-warning {
	border: 1px solid #E0E0E0;
}

// enwiki specific css for related and disambiguation links
// Should not be ported to core.
.rellink,
.dablink {
	font-style: italic;
	font-size: 90%;
	line-height: 1.5;
	margin: 0 0 .5em 0;
	padding: 0 0 0 1.6em;
	color: #333;
}

